New stuff's at the top.  This list is not necessarily complete.

3.09(pre)
 o Add TestFDate and TestCDate for date compare and sort functions (Gregg)
 o Use commaFMTULL for formating additional file, EA etc size information(Gregg)
 o Give LIBPATHSTRICT option for mailto & run FTP/HTTP (Gregg)
 o Add "mailto" option in new viewer (Gregg)
 o Make WPURLDEFAULTSETTINGS the fall back for ftp/httprun (Gregg)
 o Update CopyPresParams to copy all types of pres parameters (Gregg)
 o Add "Save as" menu item to internal viewer (Gregg)
 o Eliminate deletion of ext path if it was not valid on startup
 o Allow saving of a currently not valid ext path with warning (Gregg)
 o Internal editor now handles readonly files (Gregg)
 o Correct hex edit buffer sizing to avoid data loss (Steven)
 o Use CopyPresParams to fix presparam inconsistencies in menus  (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Update includes to allow standalone usage (Steven)
 o Switch to wrc.exe default; support USE_RC from environment (Steven)
 o Avoid out of memory traps in Compare Directories (Steven)

3.08
 o Cancel in walk directories dialog now directly closes dialog even if
   directory path text has changed (Gregg)
 o Fixed seek and scan crash caused by file names that exceed maxpath(Gregg)
 o Fixed INVALID_NAME error caused by FILEFIND buffer crossing a 64k boundry (Steven)
 o Added 32 bit DosQuerySysState API (Gregg)
 o Warpin build will not attempt to use wrong wic.exe (John)
 o Make directory now always lists current directory (not subdirectories)
   on status line (Gregg)
 o Use thousands separator from default COUNTRYINFO (Gregg, Steven)
 o Add support for files over 4GiB (Gregg, Steven)
 o Rework filemask logic to match last extension and allow for better
   string matching (Gregg)
 o Use 4096 byte buffers to protect against NFTS driver small read defect (Steven)

3.07
 o Tweak build process (Steven)